--- a/src/sass/components/_initial.scss
+++ b/src/sass/components/_initial.scss
@@ -1,3 +1,11 @@
+.main-header {
+	padding: 15px 0;
+}
+
+.main-footer {
+	padding: 15px 0;
+}
+
 /****************** COMPONENTS **********************/
 
 .page-list ul {
